--- a/org/pom.xml
+++ b/org/pom.xml
@@ -53,7 +53,11 @@
     <artifactId>joda-time</artifactId>
     <version>2.9.9</version>
 </dependency>
-
+<dependency>
+    <groupId>commons-dbcp</groupId>
+    <artifactId>commons-dbcp</artifactId>
+    <version>1.4</version>
+</dependency>
     </dependencies>
  
  
